--- a/locale/en_EN/LC_MESSAGES/messages.po
+++ b/locale/en_EN/LC_MESSAGES/messages.po
@@ -2293,7 +2293,7 @@ msgstr "Reporting URL is required for iodef tag"
 
 #: lib/Domain/Service/DnsWizard/CAAWizard.php:229
 msgid "Reporting URL must start with mailto:, https://, or http://"
-msgstr ""
+msgstr "Reporting URL must start with mailto:, https://, or http://"
 
 #: lib/Domain/Service/DnsWizard/CAAWizard.php:236
 msgid "Flags must be 0 or 128"
@@ -9838,6 +9838,8 @@ msgid ""
 "External authentication users (LDAP, OIDC, SAML) cannot have passwords "
 "managed through this interface"
 msgstr ""
+"External authentication users (LDAP, OIDC, SAML) cannot have passwords "
+"managed through this interface"
 
 #: templates/modern/confirm_unlink_zones_templ.html:6
 msgid "Unlink zones"
