--- a/locale/nl_NL/LC_MESSAGES/messages.po
+++ b/locale/nl_NL/LC_MESSAGES/messages.po
@@ -2314,7 +2314,7 @@ msgstr "Rapportage-URL is vereist voor iodef-tag"
 
 #: lib/Domain/Service/DnsWizard/CAAWizard.php:229
 msgid "Reporting URL must start with mailto:, https://, or http://"
-msgstr ""
+msgstr "Rapportage-URL moet beginnen met mailto:, https:// of http://"
 
 #: lib/Domain/Service/DnsWizard/CAAWizard.php:236
 msgid "Flags must be 0 or 128"
@@ -10034,6 +10034,8 @@ msgid ""
 "External authentication users (LDAP, OIDC, SAML) cannot have passwords "
 "managed through this interface"
 msgstr ""
+"Gebruikers met externe authenticatie (LDAP, OIDC, SAML) kunnen hun "
+"wachtwoord niet via deze interface beheren"
 
 #: templates/modern/confirm_unlink_zones_templ.html:6
 msgid "Unlink zones"
