--- a/locale/lt_LT/LC_MESSAGES/messages.po
+++ b/locale/lt_LT/LC_MESSAGES/messages.po
@@ -2291,7 +2291,7 @@ msgstr "Ataskaitų URL yra privalomas iodef žymei"
 
 #: lib/Domain/Service/DnsWizard/CAAWizard.php:229
 msgid "Reporting URL must start with mailto:, https://, or http://"
-msgstr ""
+msgstr "Ataskaitų URL turi prasidėti mailto:, https:// arba http://"
 
 #: lib/Domain/Service/DnsWizard/CAAWizard.php:236
 msgid "Flags must be 0 or 128"
@@ -9943,6 +9943,8 @@ msgid ""
 "External authentication users (LDAP, OIDC, SAML) cannot have passwords "
 "managed through this interface"
 msgstr ""
+"Išorinio autentifikavimo naudotojų (LDAP, OIDC, SAML) slaptažodžių negalima "
+"valdyti per šią sąsają"
 
 #: templates/modern/confirm_unlink_zones_templ.html:6
 msgid "Unlink zones"
